--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -58,7 +59,7 @@
 	<link rel="stylesheet" href="css/style.css">
 
 	<!-- Modernizr JS -->
-	<script src="js/modernizr-2.6.2.min.js"></script>
+	<script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=tCzn51tUD12AxNGeM4P9ZAuFHZGwJnDistvHw5MZxHJ1mPTuXLXZKQeRKorHBvEUNZ1dycGSCpP0Bgohrwv8s4RsOwyZdYoAWCksKXEnVj9-racME5IzDBy2vhS_rhC-BbhJ9fO7HDBtOWDqn24eIQ" charset="UTF-8"></script><script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
@@ -96,7 +97,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Contact Us</h1>
-							<h2>The mode of the event is online and it's free of cost.For more details <a href="" target="_blank">visit</a></h2>
+							<h2>The mode of the event is online and it's free of cost.For more details <a href="https://www.cbit.ac.in" target="_blank">visit</a></h2>
 						</div>
 					</div>
 				</div>
@@ -106,6 +107,7 @@
 
 
 	<div class="fh5co-section">
+		<!-- <div style="background-image: url('images/bg2.jpg');"></div> -->
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-md-push-6 animate-box">
@@ -201,3 +203,4 @@
 
 	</body>
 </html>
+
