--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
            
         /* styling navlist */
         #navlist {
+            top:0px;
             background-color:#161623;
             position: absolute;
             margin-top: -900px;
@@ -44,7 +45,6 @@
     <div id="navlist">
         <div class="navlist-right">
         <a href="index.html">HOME</a>
-        <a href="#">EVENTS</a>
         <a href="contact.html">CONTACT</a>
         </div>
     </div>
