--- a/about.html
+++ b/about.html
@@ -108,9 +108,9 @@
                     <img src="./adidas.png" alt="Events" />
                 </div>
                 <h2>Tecstasy</h2>
-                <h3>Trace It</h3>
+                <h3>Tic Tech Toe</h3>
                 
-                 <a href="traceit.html">Register</a>
+                 <a href="ttt.html">Register</a>
             </div>
         </div>
         <div class="card">
@@ -122,9 +122,9 @@
                     <img src="./adidas.png" alt="Events" />
                 </div>
                 <h2>Tecstasy</h2>
-                <h3>Code Hunt</h3>
+                <h3>Blind Coding</h3>
                 
-                 <a href="codehunt.html">Register</a>
+                 <a href="blindcoding.html">Register</a>
             </div>
         </div>
     </div>
