--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
                 <h2>Tecstasy</h2>
                 <h3>Duothon</h3>
                
-                 <a href="duothon.html">Register</a>
+                 <a href="duathon.html">Register</a>
             </div>
         </div>
         <div class="card">
