--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="col-xs-10 text-right menu-1">
           <ul>
             <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="sh.html">Events</a></li>
+            <li><a href="about.html">Events</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
