--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 <body>
     <div id="navlist">
         <div class="navlist-right">
-        <a href="home.html">HOME</a>
+        <a href="index.html">HOME</a>
         <!-- <a href="#">EVENTS</a> -->
         <a href="contact.html">CONTACT</a>
         </div>
