--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 				</div>
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
-						<li><a href="home.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html">Events</a></li>
 						<li class="active"><a href="contact.html">Contact</a></li>
 					</ul>
